<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/backcolor"
        app:cardCornerRadius="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p"
            android:fontFamily="@font/quicksandbold"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_contact"
            android:fontFamily="@font/quicksand_semi_bold"
            android:textSize="13sp"
            android:textColor="@color/black02"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:fontFamily="@font/quicksandmedium"
            android:textSize="12sp"
            android:textColor="@color/backcolor"/>

    </LinearLayout>

</LinearLayout>