<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingHorizontal="18dp"
    android:paddingTop="18dp"
    android:orientation="vertical"
    tools:context=".MobileBillPayment.ContactOperatorActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/txtBack"
            android:text="@string/back"
            android:fontFamily="@font/quicksandmedium"
            android:textColor="@color/backcolor"
            android:textAlignment="center"
            android:textSize="12sp"
            android:paddingVertical="3dp"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_bill_payment"
            android:fontFamily="@font/quicksand_semi_bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgHelp"
            android:src="@drawable/help"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile_number"
        android:fontFamily="@font/quicksand_semi_bold"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black02"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/reactangle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backcolor"
            android:text="@string/country_code"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="#E6E8EB"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/edtContact"
            android:hint="@string/hint_enter_number_here"
            android:textSize="13sp"
            android:maxLength="15"
            android:inputType="text"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:scrimAnimationDuration="0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal">

                        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/card_view"
                            app:cardBackgroundColor="@color/backcolor"
                            app:cardCornerRadius="25dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_label"
                                android:layout_gravity="center"
                                android:text="@string/p"
                                android:fontFamily="@font/quicksandbold"
                                android:textSize="12sp"
                                android:textColor="@android:color/white"/>

                        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical"
                            android:layout_gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_name"
                                android:text="@string/your_contact"
                                android:fontFamily="@font/quicksand_semi_bold"
                                android:textSize="13sp"
                                android:textColor="@color/black02"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtMyContact"
                                android:text="@string/contact_no"
                                android:fontFamily="@font/quicksandmedium"
                                android:textSize="12sp"
                                android:textColor="@color/backcolor"/>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recents"
                        android:fontFamily="@font/quicksandmedium"
                        android:textSize="15sp"
                        android:textColor="@color/black02"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recycle_recent"
                        android:background="@drawable/recycle_view_bg"
                        android:layout_marginVertical="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_contact"
                        android:fontFamily="@font/quicksandmedium"
                        android:textSize="15sp"
                        android:textColor="@color/black02"/>
                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:background="@drawable/recycle_view_bg"
            android:id="@+id/recycle_contacts"
            android:layout_marginVertical="10dp"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>