<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F6F6F6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:id="@+id/txt_back"
            android:text="@string/back"
            android:fontFamily="@font/quicksandmedium"
            android:textColor="@color/backcolor"
            android:textAlignment="center"
            android:textSize="12sp"
            android:paddingVertical="3dp"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="@drawable/white_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/img_payment"
                android:src="@drawable/icon_success"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/txt_title"
                android:text="@string/mobile_recharge"
                android:fontFamily="@font/quicksand_semi_bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_message"
                android:text="@string/mobile_recharge"
                android:fontFamily="@font/quicksand"
                android:textSize="18sp"
                android:textColor="@color/black02"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lin_transaction"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_id"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:textSize="14sp"
                    android:textColor="@color/black39"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/transaction_id_code"
                    android:fontFamily="@font/quicksand"
                    android:textSize="14sp"
                    android:textColor="@color/black39"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_invoice"
            android:padding="10dp"
            android:layout_above="@+id/txt_action"
            android:text="@string/download_invoice"
            android:fontFamily="@font/quicksand_semi_bold"
            android:textSize="14sp"
            android:textColor="@color/backcolor"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/txt_action"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/sky_blue_button"/>

    </RelativeLayout>



</LinearLayout>