<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/bg_reactangle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relMain">

            <ImageView
                android:id="@+id/img_option_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upi_icon"/>

            <TextView
                android:id="@+id/txt_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img_option_icon"
                android:fontFamily="@font/quicksand_semi_bold"
                android:gravity="center"
                android:text="@string/upi"
                android:textColor="@color/bg_reachge_header_black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_dwon_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/dwon_up_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtBankname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/Bank_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtchack_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBankname"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/chack_blance"
                android:layout_marginTop="14dp"
                android:textColor="@color/backcolor"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtchack_balance"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_reactangle"
                android:text="@string/chack_blance_pay"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>






</LinearLayout>