<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/bg_background"
    tools:context=".MobileRecharge.HelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:fontFamily="@font/quicksandmedium"
            android:paddingVertical="3dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@color/bg_textcolor_back"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/ImgHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_search"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/faqs"
        android:fontFamily="@font/quicksand_semi_bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</LinearLayout>